<resources>
    //////////
    //07-16(Saturday):
    <string-array name="hast_tag_list">
        <item>#fujifilm </item>
        <item>#Instax </item>
        <item>#Discount </item>
        <item>#Limited </item>
        <item>#Limited </item>
        <item>#Time </item>
        <item>#Travel </item>
    </string-array>

    <integer name="original_price">1350</integer>
    <integer name="discount_price">888</integer>
    <integer name="discount">10</integer>
    <string-array name="feed_category">
        <item>"Electronic"</item>
        <item>"Clothes"</item>
        <item>"Device"</item>
    </string-array>


    /////////

    <string name="edit_password">Edit Passowrd</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="Enter_your_email_address_below_and_well">"Enter your email address below and we'll"</string>
    <string name="send_you_password_reset_instruction">send you password reset instruction</string>
    <string name="search">Search</string>
    <string name="like_your_photo">like your photo.</string>
    <string name="one_hour_ago">1 hour ago</string>
    <string name="upload">Upload</string>
    <string name="email_login">Email Login!</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="order_best_products_for_your_needs">Order best products for your needs</string>
    <string name="we_will_deliver_them_right_in_time_and_point">We will deliver them right in time and point</string>
    <string name="sign_up">Sign Up</string>
    <string name="detail">Detail</string>
    <string name="sign_up_successful">sign_up_successful</string>
    <string name="sign_up_successful_message">"to complete your ShopDaily account activation, we will sent an email to confirm your email. Once you have verified your email address, you're ready to start "</string>

    <string name="save">save</string>
    <string name="shop_detail">Shop Detail</string>
    <string name="shop_name">Shop Name</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="connect_with_facebook">Connect with facebook</string>
    <string name="change_password">Change Password</string>
    <string name="nick_name">Nick Name</string>
    <string name="birthday">Birthday</string>
    <string name="app_name">" shopdaily"</string>
    <string name="action_settings">Settings</string>
    <string name="store_info">"it's never to late to snap a deal on FUJIFILM INSTAX series. Today, save $150 off the Indigo Bundle, including two packs of dile and a swanky travel case!"</string>
    <string name="yeah_camera_shop_details">The Camera Shop in Bryn Mawr is an independent family-owned and operated business that has served the Philadelphia area since 1920 on Lancaster Avenue in Bryn Mawr since the late 1970s</string>
    <string name="submitText">Before you submit, please check out %1$s</string>
    <string name="this_link">this link</string>
    <string name="forget_password"><u>Password?</u></string>
    <string name="feed">"feed"</string>
    <string name="shop">"shop"</string>
    <string name="filter">"filter"</string>
    <string name="post_feed">"Post Feed"</string>
    <string name="regular_price">Regular Price</string>
    <string name="sale_price">Sale Price</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="hashtag">Hashtag</string>
    <string name="post">Post</string>
    <string name="special">Special</string>
    <string name="edit">Edit</string>
    <string name="setting">setting</string>
    <string name="language">language</string>
    <string name="push_notification">push notification</string>
    <string name="version">version</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_and_terms_condition">"privacy and terms&amp;condition"</string>
    <string name="logout">Logout</string>
    <string name="subject">Subject</string>
    <string name="leave_your_message_here">Leave your message here… </string>
    <string name="reset">Reset</string>
    <string name="send">Send</string>
    <string name="monthly_subscription_more">Monthly Subscription More…</string>
    <string name="ad_hoc_marketing_campaign_more">Ad-Hoc Marketing Campaign More…</string>
    <string name="shop_status_report_more">Shop Status Report More…</string>
    <string name="advertisment_monthly_vaildaity_more">Advertisement Monthly Validity More…</string>
    <string name="subscribe">Subscribe</string>
    <string name="create_ad_hoc_feed">Create Ad-hoc feed</string>
    <string name="shop_status_report">Shop Status Report</string>
    <string name="total_view_count">Total View Count</string>
    <string name="total_reaction">Total Reaction</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="top_feed">Top Feed</string>
    <string name="top_active_user">Top Active User</string>
    <string name="timing">Timing</string>
    <string name="tel">Tel</string>
    <string name="address">Address</string>
    <string name="open_close">Open &amp; Close</string>
    <string name="followers"> | Followers</string>
    <string name="react">React</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>


    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDeP-x68V1SVzdwHKA4cFBJ5G7KByqrats</string>
    <string name="Do_not_show_again">Don\'t show again</string>
    <string name="Q_and_A"><![CDATA[Q&A]]></string>
    <string name="QA_list"><![CDATA[Q&A]]></string>

    <string-array name="tab_layout_menu">
        <item>feed</item>
        <item>category</item>
        <item>location</item>
        <item>favourite</item>
        <item>profile</item>
    </string-array>


    <string-array name="spinner">
        <item>Select gallery</item>
        <item>Suggested</item>
        <item>Footprint Left</item>
    </string-array>

    <string-array name="shop_list">
        <item>Yeah Camera Shop</item>
        <item>Burgeroom</item>
        <item>Via Tokyo</item>
        <item>Little Vegas</item>
    </string-array>

    <string-array name="shop_location_list">
        <item>Causeway Bay</item>
        <item>Wan Chai</item>
        <item>Tin Shui Wai</item>
        <item>Kowloon</item>
    </string-array>


    <string-array name="filter_top_bar">
        <item>Price</item>
        <item>Location</item>
        <item>Category</item>
    </string-array>


    <string-array name="filter_item">
        <item>Price</item>
        <item>Location</item>
        <item>Category</item>
    </string-array>

    <string-array name="filter_item_price">
        <item>$1–50</item>
        <item>$51–200</item>
        <item>$200–500</item>
        <item>$500–1000</item>
        <item>$1001+</item>
    </string-array>

    <string-array name="filter_item_location">
        <item>china</item>
        <item>UK</item>
        <item>Hong Kong</item>
        <item>Japan</item>
        <item>Tai Wan</item>
    </string-array>

    <string-array name="filter_item_category">
        <item>category1</item>
        <item>category2</item>
        <item>category3</item>
        <item>category4</item>
        <item>category5</item>
    </string-array>


    <string-array name="top_feed_list">
        <item>Camera But 1 get 1 free promotion...</item>
        <item>Camera But 1 get 1 free promotion...</item>
        <item>Camera But 1 get 1 free promotion...</item>
        <item>Camera But 1 get 1 free promotion...</item>
        <item>Camera But 1 get 1 free promotion...</item>
    </string-array>

    <string-array name="top_active_user">
        <item>Chan Tai Man</item>
        <item>Chan Tai Man</item>
        <item>Chan Tai Man</item>
        <item>Chan Tai Man</item>
        <item>Chan Tai Man</item>
    </string-array>
    <string-array name="monthly_subcription">
        <item>Free for <b><i>one Monthly Report</i></b></item>
        <item>50% off of Discounts on ADhoc Marketing Campaign and Monthly advertising Shopfeed</item>
        <item>From Allowable to create 5 new shopfeeds per day upgrade to unlimited shopfeed per day</item>
        <item>Product Photoshooting</item>
    </string-array>


    <string-array name="shop_full_location_list">
        <item>SHop 1A-1B, G/F, Leishun Court, 106-126 Leighton Road, Causeway Bay</item>
        <item>SHop 2A-2B, G/F, Leishun Court, 106-126 Leighton Road, Wan Chai</item>
        <item>SHop 3A-3B, G/F, Leishun Court, 106-126 Leighton Road, Tin Shui Wai</item>
        <item>SHop 4A-4B, G/F, Leishun Court, 106-126 Leighton Road, Kowloon</item>
    </string-array>

    <string-array name="category_list">
        <item>Camera</item>
        <item>Camera 2</item>
        <item>Camera 3</item>
    </string-array>

    <string-array name="language_list">
        <item>Please select language</item>
        <item>English</item>
        <item>Chinese</item>
        <item>Germany</item>
    </string-array>

    <string-array name="Push_option">
        <item>On</item>
        <item>Off</item>
    </string-array>

</resources>
