<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:background="@color/colorPrimary" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageButton
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/btn_back"
                    android:src="@drawable/icon_back"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/contact_us"
                    android:textColor="@color/white"
                    android:id="@+id/txt_go_back"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/reset"
                    android:textSize="15dp"
                    android:textColor="@color/white"
                    android:id="@+id/txt_reset"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/subject"
                android:textSize="15dp"
                android:textColor="#808080"
                android:id="@+id/current_password"
                android:layout_gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:id="@+id/input_subject"
                    android:background="@null"
                    android:layout_gravity="center" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/thin_grey_line_to_cut"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15dp"
                android:textColor="#cecece"
                android:id="@+id/input_message"
                android:background="@null"
                android:layout_gravity="top|center"
                android:textColorHint="@color/font_color_pirmary"
                android:hint="@string/leave_your_message_here"
                android:gravity="top" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:text="@string/send"
                android:textColor="@color/font_color_pirmary"

                android:background="@drawable/my_button_bg_2"
                android:clickable="true"
                android:contextClickable="true"
                android:layout_marginTop="50dp" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>