<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:background="@color/colorPrimary" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageButton
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/btn_back"
                    android:src="@drawable/icon_back"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/edit_password"
                    android:textColor="@color/white"
                    android:id="@+id/txt_go_back"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/save"
                    android:textSize="15dp"
                    android:textColor="@color/white"
                    android:id="@+id/Save"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/current_password"
                android:textSize="13dp"
                android:textColor="@color/font_color_pirmary"
                android:id="@+id/current_password"
                android:layout_gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="end" >

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:textColor="@color/color_pressed"
                    android:id="@+id/input_current_password"
                    android:background="@null"
                    android:layout_gravity="center" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/thin_grey_line_to_cut"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/new_password"
                android:textSize="13dp"
                android:textColor="@color/font_color_pirmary"
                android:id="@+id/password"
                android:layout_gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="end" >

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:textColor="@color/color_pressed"
                    android:id="@+id/input_n_password"
                    android:background="@null"
                    android:layout_gravity="center" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/thin_grey_line_to_cut"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/confirm_password"
                android:textSize="13dp"
                android:textColor="@color/font_color_pirmary"
                android:id="@+id/password_c"
                android:layout_gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="end" >

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:textColor="@color/color_pressed"
                    android:id="@+id/input_c_password"
                    android:background="@null"
                    android:layout_gravity="center" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/thin_grey_line_to_cut"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />


    </LinearLayout>

</RelativeLayout>