<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:background="@color/colorPrimary" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageButton
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/btn_back"
                    android:src="@drawable/icon_back"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/post_feed"
                    android:textColor="@color/white"
                    android:id="@+id/txt_go_back"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center">

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/regular_price"
                android:textSize="13dp"
                android:textColor="@color/font_color_pirmary"
                android:id="@+id/current_password"
                android:layout_gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="end" >

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="$20"
                    android:textSize="13dp"
                    android:textColor="@color/color_pressed"
                    android:id="@+id/txt_regular_price"
                    android:gravity="right"
                    android:layout_gravity="center" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/thin_grey_line_to_cut"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sale_price"
                android:textSize="13dp"
                android:textColor="@color/font_color_pirmary"
                android:id="@+id/txtsp"
                android:layout_gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="end" >

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="13dp"
                    android:textColor="@color/color_pressed"
                    android:id="@+id/txt_sale_price"
                    android:gravity="right"
                    android:layout_gravity="center" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/thin_grey_line_to_cut"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/category"
                    android:textSize="13dp"
                    android:textColor="@color/font_color_pirmary"
                    android:id="@+id/txtc"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <Spinner
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner"
                    android:layout_marginRight="-20dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/description"
                android:textSize="13dp"
                android:textColor="@color/font_color_pirmary"
                android:id="@+id/textView40"
                android:layout_gravity="left|center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="left|end"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="13dp"
                    android:textColor="@color/color_pressed"
                    android:id="@+id/txt_description"
                    android:layout_gravity="right" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/thin_grey_line_to_cut"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/hashtag"
                android:textSize="13dp"
                android:textColor="@color/font_color_pirmary"
                android:id="@+id/textView42"
                android:layout_gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="end" >

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="13dp"
                    android:textColor="@color/color_pressed"
                    android:id="@+id/txt_hashTag"
                    android:gravity="right"
                    android:layout_gravity="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="50dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/appicon_full"
                android:id="@+id/photo01"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/appicon_full"
                android:id="@+id/photo02"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_post"
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:text="@string/post"
                android:textColor="@color/font_color_pirmary"
                android:background="@drawable/my_button_bg_2"
                android:clickable="true"
                android:contextClickable="true"
                android:layout_marginTop="50dp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>